CeylonInterpreter/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLASS
    DOT
    FALSE
    FSTRING
    IN
    LBRACKET
    RBRACKET
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> statement_list
Rule 3     statement_list -> statement statement_list
Rule 4     statement_list -> empty
Rule 5     statement -> var_assign SEMI
Rule 6     statement -> final_assign SEMI
Rule 7     statement -> var_compound_assign SEMI
Rule 8     statement -> concat_assign SEMI
Rule 9     statement -> var_auto SEMI
Rule 10    statement -> expr SEMI
Rule 11    statement -> func_stmt
Rule 12    statement -> switch_stmt
Rule 13    statement -> if_stmt
Rule 14    statement -> while_stmt
Rule 15    statement -> for_stmt
Rule 16    statement -> print_stmt SEMI
Rule 17    statement -> scan_stmt SEMI
Rule 18    statement -> empty
Rule 19    scoped_block -> scoped_statement_list
Rule 20    scoped_statement_list -> scoped_statement scoped_statement_list
Rule 21    scoped_statement_list -> empty
Rule 22    scoped_statement -> var_assign SEMI
Rule 23    scoped_statement -> final_assign SEMI
Rule 24    scoped_statement -> var_compound_assign SEMI
Rule 25    scoped_statement -> concat_assign SEMI
Rule 26    scoped_statement -> var_auto SEMI
Rule 27    scoped_statement -> expr SEMI
Rule 28    scoped_statement -> func_stmt
Rule 29    scoped_statement -> scoped_switch_stmt
Rule 30    scoped_statement -> scoped_if_stmt
Rule 31    scoped_statement -> scoped_while_stmt
Rule 32    scoped_statement -> scoped_for_stmt
Rule 33    scoped_statement -> print_stmt SEMI
Rule 34    scoped_statement -> scan_stmt SEMI
Rule 35    scoped_statement -> return SEMI
Rule 36    scoped_statement -> empty
Rule 37    return -> RETURN expr
Rule 38    func_stmt -> FN var LPAREN parameters_list RPAREN LBRACE scoped_block RBRACE
Rule 39    func_call -> var LPAREN arguments_list RPAREN
Rule 40    arguments_list -> non_empty_arguments_list
Rule 41    arguments_list -> empty
Rule 42    non_empty_arguments_list -> expr COMMA non_empty_arguments_list
Rule 43    non_empty_arguments_list -> expr
Rule 44    parameters_list -> non_empty_parameters_list
Rule 45    parameters_list -> empty
Rule 46    non_empty_parameters_list -> var COMMA non_empty_parameters_list
Rule 47    non_empty_parameters_list -> var
Rule 48    switch_stmt -> SWITCH LPAREN var RPAREN LBRACE case RBRACE
Rule 49    case -> CASE expr LBRACE block RBRACE case
Rule 50    case -> default_case
Rule 51    case -> empty
Rule 52    default_case -> DEFAULT LBRACE block RBRACE
Rule 53    if_stmt -> IF LPAREN boolean_expr RPAREN LBRACE block RBRACE elif_stmt
Rule 54    elif_stmt -> ELIF LPAREN boolean_expr RPAREN LBRACE block RBRACE elif_stmt
Rule 55    elif_stmt -> else_stmt
Rule 56    elif_stmt -> empty
Rule 57    else_stmt -> ELSE LBRACE block RBRACE
Rule 58    scoped_switch_stmt -> SWITCH LPAREN var RPAREN LBRACE scoped_case RBRACE
Rule 59    scoped_case -> CASE expr LBRACE scoped_block RBRACE scoped_case
Rule 60    scoped_case -> scoped_default_case
Rule 61    scoped_case -> empty
Rule 62    scoped_default_case -> DEFAULT LBRACE scoped_block RBRACE
Rule 63    scoped_if_stmt -> IF LPAREN boolean_expr RPAREN LBRACE scoped_block RBRACE scoped_elif_stmt
Rule 64    scoped_elif_stmt -> ELIF LPAREN boolean_expr RPAREN LBRACE scoped_block RBRACE scoped_elif_stmt
Rule 65    scoped_elif_stmt -> scoped_else_stmt
Rule 66    scoped_elif_stmt -> empty
Rule 67    scoped_else_stmt -> ELSE LBRACE scoped_block RBRACE
Rule 68    scoped_while_stmt -> WHILE LPAREN boolean_expr RPAREN LBRACE scoped_block RBRACE
Rule 69    scoped_for_stmt -> FOR LPAREN var_assign SEMI boolean_expr SEMI var_auto RPAREN LBRACE scoped_block RBRACE
Rule 70    print_stmt -> PRINT LPAREN expr RPAREN
Rule 71    scan_stmt -> SCAN LPAREN var RPAREN
Rule 72    while_stmt -> WHILE LPAREN boolean_expr RPAREN LBRACE block RBRACE
Rule 73    for_stmt -> FOR LPAREN var_assign SEMI boolean_expr SEMI var_auto RPAREN LBRACE block RBRACE
Rule 74    var -> ID
Rule 75    var_assign -> var ASSIGN expr
Rule 76    final_assign -> FINAL var ASSIGN expr
Rule 77    var_compound_assign -> var PLUS_ASSIGN num_expr
Rule 78    var_compound_assign -> var MINUS_ASSIGN num_expr
Rule 79    var_compound_assign -> var TIMES_ASSIGN num_expr
Rule 80    var_compound_assign -> var DIVIDE_ASSIGN num_expr
Rule 81    var_compound_assign -> var POWER_ASSIGN num_expr
Rule 82    var_compound_assign -> var MODULO_ASSIGN num_expr
Rule 83    var_compound_assign -> var INT_DIVIDE_ASSIGN num_expr
Rule 84    concat_assign -> var CONCAT_ASSIGN string_expr
Rule 85    var_auto -> var INCREMENT
Rule 86    var_auto -> var DECREMENT
Rule 87    expr -> string_expr
Rule 88    expr -> num_expr
Rule 89    expr -> boolean_expr
Rule 90    expr -> null_expr
Rule 91    expr -> ternary_expr
Rule 92    expr -> var
Rule 93    expr -> func_call
Rule 94    num_factor -> PLUS num_factor
Rule 95    num_factor -> MINUS num_factor
Rule 96    num_factor -> INTEGER
Rule 97    num_factor -> FLOAT
Rule 98    num_factor -> LPAREN num_expr RPAREN
Rule 99    num_factor -> func_call
Rule 100   num_factor -> var
Rule 101   num_expr -> num_expr PLUS num_expr
Rule 102   num_expr -> num_expr MINUS num_expr
Rule 103   num_expr -> num_expr TIMES num_expr
Rule 104   num_expr -> num_expr DIVIDE num_expr
Rule 105   num_expr -> num_expr INT_DIVIDE num_expr
Rule 106   num_expr -> num_expr POWER num_expr
Rule 107   num_expr -> num_expr MODULO num_expr
Rule 108   num_expr -> num_factor
Rule 109   string_expr -> string_expr CONCAT string_expr
Rule 110   string_expr -> STRING
Rule 111   string_expr -> var
Rule 112   boolean_expr -> boolean_expr AND boolean_expr
Rule 113   boolean_expr -> boolean_expr OR boolean_expr
Rule 114   boolean_expr -> NOT boolean_expr
Rule 115   boolean_expr -> boolean_factor
Rule 116   boolean_factor -> LPAREN boolean_expr RPAREN
Rule 117   boolean_factor -> BOOLEAN
Rule 118   boolean_factor -> comparison
Rule 119   boolean_factor -> var
Rule 120   comparison -> expr EQ expr
Rule 121   comparison -> expr NE expr
Rule 122   comparison -> expr LT expr
Rule 123   comparison -> expr GT expr
Rule 124   comparison -> expr LE expr
Rule 125   comparison -> expr GE expr
Rule 126   null_expr -> NULL
Rule 127   ternary_expr -> boolean_expr TERNARY_Q expr TERNARY_C expr
Rule 128   empty -> <empty>

Terminals, with rules where they appear

AND                  : 112
ASSIGN               : 75 76
BOOLEAN              : 117
CASE                 : 49 59
CLASS                : 
COMMA                : 42 46
CONCAT               : 109
CONCAT_ASSIGN        : 84
DECREMENT            : 86
DEFAULT              : 52 62
DIVIDE               : 104
DIVIDE_ASSIGN        : 80
DOT                  : 
ELIF                 : 54 64
ELSE                 : 57 67
EQ                   : 120
FALSE                : 
FINAL                : 76
FLOAT                : 97
FN                   : 38
FOR                  : 69 73
FSTRING              : 
GE                   : 125
GT                   : 123
ID                   : 74
IF                   : 53 63
IN                   : 
INCREMENT            : 85
INTEGER              : 96
INT_DIVIDE           : 105
INT_DIVIDE_ASSIGN    : 83
LBRACE               : 38 48 49 52 53 54 57 58 59 62 63 64 67 68 69 72 73
LBRACKET             : 
LE                   : 124
LPAREN               : 38 39 48 53 54 58 63 64 68 69 70 71 72 73 98 116
LT                   : 122
MINUS                : 95 102
MINUS_ASSIGN         : 78
MODULO               : 107
MODULO_ASSIGN        : 82
NE                   : 121
NOT                  : 114
NULL                 : 126
OR                   : 113
PLUS                 : 94 101
PLUS_ASSIGN          : 77
POWER                : 106
POWER_ASSIGN         : 81
PRINT                : 70
RBRACE               : 38 48 49 52 53 54 57 58 59 62 63 64 67 68 69 72 73
RBRACKET             : 
RETURN               : 37
RPAREN               : 38 39 48 53 54 58 63 64 68 69 70 71 72 73 98 116
SCAN                 : 71
SEMI                 : 5 6 7 8 9 10 16 17 22 23 24 25 26 27 33 34 35 69 69 73 73
STRING               : 110
SWITCH               : 48 58
TERNARY_C            : 127
TERNARY_Q            : 127
TIMES                : 103
TIMES_ASSIGN         : 79
TRUE                 : 
WHILE                : 68 72
error                : 

Nonterminals, with rules where they appear

arguments_list       : 39
block                : 1 49 52 53 54 57 72 73
boolean_expr         : 53 54 63 64 68 69 72 73 89 112 112 113 113 114 116 127
boolean_factor       : 115
case                 : 48 49
comparison           : 118
concat_assign        : 8 25
default_case         : 50
elif_stmt            : 53 54
else_stmt            : 55
empty                : 4 18 21 36 41 45 51 56 61 66
expr                 : 10 27 37 42 43 49 59 70 75 76 120 120 121 121 122 122 123 123 124 124 125 125 127 127
final_assign         : 6 23
for_stmt             : 15
func_call            : 93 99
func_stmt            : 11 28
if_stmt              : 13
non_empty_arguments_list : 40 42
non_empty_parameters_list : 44 46
null_expr            : 90
num_expr             : 77 78 79 80 81 82 83 88 98 101 101 102 102 103 103 104 104 105 105 106 106 107 107
num_factor           : 94 95 108
parameters_list      : 38
print_stmt           : 16 33
program              : 0
return               : 35
scan_stmt            : 17 34
scoped_block         : 38 59 62 63 64 67 68 69
scoped_case          : 58 59
scoped_default_case  : 60
scoped_elif_stmt     : 63 64
scoped_else_stmt     : 65
scoped_for_stmt      : 32
scoped_if_stmt       : 30
scoped_statement     : 20
scoped_statement_list : 19 20
scoped_switch_stmt   : 29
scoped_while_stmt    : 31
statement            : 3
statement_list       : 2 3
string_expr          : 84 87 109 109
switch_stmt          : 12
ternary_expr         : 91
var                  : 38 39 46 47 48 58 71 75 76 77 78 79 80 81 82 83 84 85 86 92 100 111 119
var_assign           : 5 22 69 73
var_auto             : 9 26 69 73
var_compound_assign  : 7 24
while_stmt           : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . statement_list
    (3) statement_list -> . statement statement_list
    (4) statement_list -> . empty
    (5) statement -> . var_assign SEMI
    (6) statement -> . final_assign SEMI
    (7) statement -> . var_compound_assign SEMI
    (8) statement -> . concat_assign SEMI
    (9) statement -> . var_auto SEMI
    (10) statement -> . expr SEMI
    (11) statement -> . func_stmt
    (12) statement -> . switch_stmt
    (13) statement -> . if_stmt
    (14) statement -> . while_stmt
    (15) statement -> . for_stmt
    (16) statement -> . print_stmt SEMI
    (17) statement -> . scan_stmt SEMI
    (18) statement -> . empty
    (128) empty -> .
    (75) var_assign -> . var ASSIGN expr
    (76) final_assign -> . FINAL var ASSIGN expr
    (77) var_compound_assign -> . var PLUS_ASSIGN num_expr
    (78) var_compound_assign -> . var MINUS_ASSIGN num_expr
    (79) var_compound_assign -> . var TIMES_ASSIGN num_expr
    (80) var_compound_assign -> . var DIVIDE_ASSIGN num_expr
    (81) var_compound_assign -> . var POWER_ASSIGN num_expr
    (82) var_compound_assign -> . var MODULO_ASSIGN num_expr
    (83) var_compound_assign -> . var INT_DIVIDE_ASSIGN num_expr
    (84) concat_assign -> . var CONCAT_ASSIGN string_expr
    (85) var_auto -> . var INCREMENT
    (86) var_auto -> . var DECREMENT
    (87) expr -> . string_expr
    (88) expr -> . num_expr
    (89) expr -> . boolean_expr
    (90) expr -> . null_expr
    (91) expr -> . ternary_expr
    (92) expr -> . var
    (93) expr -> . func_call
    (38) func_stmt -> . FN var LPAREN parameters_list RPAREN LBRACE scoped_block RBRACE
    (48) switch_stmt -> . SWITCH LPAREN var RPAREN LBRACE case RBRACE
    (53) if_stmt -> . IF LPAREN boolean_expr RPAREN LBRACE block RBRACE elif_stmt
    (72) while_stmt -> . WHILE LPAREN boolean_expr RPAREN LBRACE block RBRACE
    (73) for_stmt -> . FOR LPAREN var_assign SEMI boolean_expr SEMI var_auto RPAREN LBRACE block RBRACE
    (70) print_stmt -> . PRINT LPAREN expr RPAREN
    (71) scan_stmt -> . SCAN LPAREN var RPAREN
    (74) var -> . ID
    (109) string_expr -> . string_expr CONCAT string_expr
    (110) string_expr -> . STRING
    (111) string_expr -> . var
    (101) num_expr -> . num_expr PLUS num_expr
    (102) num_expr -> . num_expr MINUS num_expr
    (103) num_expr -> . num_expr TIMES num_expr
    (104) num_expr -> . num_expr DIVIDE num_expr
    (105) num_expr -> . num_expr INT_DIVIDE num_expr
    (106) num_expr -> . num_expr POWER num_expr
    (107) num_expr -> . num_expr MODULO num_expr
    (108) num_expr -> . num_factor
    (112) boolean_expr -> . boolean_expr AND boolean_expr
    (113) boolean_expr -> . boolean_expr OR boolean_expr
    (114) boolean_expr -> . NOT boolean_expr
    (115) boolean_expr -> . boolean_factor
    (126) null_expr -> . NULL
    (127) ternary_expr -> . boolean_expr TERNARY_Q expr TERNARY_C expr
    (39) func_call -> . var LPAREN arguments_list RPAREN
    (94) num_factor -> . PLUS num_factor
    (95) num_factor -> . MINUS num_factor
    (96) num_factor -> . INTEGER
    (97) num_factor -> . FLOAT
    (98) num_factor -> . LPAREN num_expr RPAREN
    (99) num_factor -> . func_call
    (100) num_factor -> . var
    (116) boolean_factor -> . LPAREN boolean_expr RPAREN
    (117) boolean_factor -> . BOOLEAN
    (118) boolean_factor -> . comparison
    (119) boolean_factor -> . var
    (120) comparison -> . expr EQ expr
    (121) comparison -> . expr NE expr
    (122) comparison -> . expr LT expr
    (123) comparison -> . expr GT expr
    (124) comparison -> . expr LE expr
    (125) comparison -> . expr GE expr

  ! shift/reduce conflict for FINAL resolved as shift
  ! shift/reduce conflict for FN resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for SCAN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    $end            reduce using rule 128 (empty -> .)
    FINAL           shift and go to state 20
    FN              shift and go to state 27
    SWITCH          shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    PRINT           shift and go to state 33
    SCAN            shift and go to state 34
    ID              shift and go to state 35
    STRING          shift and go to state 36
    NOT             shift and go to state 40
    NULL            shift and go to state 42
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    INTEGER         shift and go to state 43
    FLOAT           shift and go to state 44
    LPAREN          shift and go to state 28
    BOOLEAN         shift and go to state 45

  ! FINAL           [ reduce using rule 128 (empty -> .) ]
  ! FN              [ reduce using rule 128 (empty -> .) ]
  ! SWITCH          [ reduce using rule 128 (empty -> .) ]
  ! IF              [ reduce using rule 128 (empty -> .) ]
  ! WHILE           [ reduce using rule 128 (empty -> .) ]
  ! FOR             [ reduce using rule 128 (empty -> .) ]
  ! PRINT           [ reduce using rule 128 (empty -> .) ]
  ! SCAN            [ reduce using rule 128 (empty -> .) ]
  ! ID              [ reduce using rule 128 (empty -> .) ]
  ! STRING          [ reduce using rule 128 (empty -> .) ]
  ! NOT             [ reduce using rule 128 (empty -> .) ]
  ! NULL            [ reduce using rule 128 (empty -> .) ]
  ! PLUS            [ reduce using rule 128 (empty -> .) ]
  ! MINUS           [ reduce using rule 128 (empty -> .) ]
  ! INTEGER         [ reduce using rule 128 (empty -> .) ]
  ! FLOAT           [ reduce using rule 128 (empty -> .) ]
  ! LPAREN          [ reduce using rule 128 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 128 (empty -> .) ]

    program                        shift and go to state 1
    block                          shift and go to state 2
    statement_list                 shift and go to state 3
    statement                      shift and go to state 4
    empty                          shift and go to state 5
    var_assign                     shift and go to state 6
    final_assign                   shift and go to state 7
    var_compound_assign            shift and go to state 8
    concat_assign                  shift and go to state 9
    var_auto                       shift and go to state 10
    expr                           shift and go to state 11
    func_stmt                      shift and go to state 12
    switch_stmt                    shift and go to state 13
    if_stmt                        shift and go to state 14
    while_stmt                     shift and go to state 15
    for_stmt                       shift and go to state 16
    print_stmt                     shift and go to state 17
    scan_stmt                      shift and go to state 18
    var                            shift and go to state 19
    num_expr                       shift and go to state 21
    string_expr                    shift and go to state 22
    boolean_expr                   shift and go to state 23
    null_expr                      shift and go to state 24
    ternary_expr                   shift and go to state 25
    func_call                      shift and go to state 26
    num_factor                     shift and go to state 39
    boolean_factor                 shift and go to state 41
    comparison                     shift and go to state 46

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> statement_list .

    $end            reduce using rule 2 (block -> statement_list .)
    RBRACE          reduce using rule 2 (block -> statement_list .)


state 4

    (3) statement_list -> statement . statement_list
    (3) statement_list -> . statement statement_list
    (4) statement_list -> . empty
    (5) statement -> . var_assign SEMI
    (6) statement -> . final_assign SEMI
    (7) statement -> . var_compound_assign SEMI
    (8) statement -> . concat_assign SEMI
    (9) statement -> . var_auto SEMI
    (10) statement -> . expr SEMI
    (11) statement -> . func_stmt
    (12) statement -> . switch_stmt
    (13) statement -> . if_stmt
    (14) statement -> . while_stmt
    (15) statement -> . for_stmt
    (16) statement -> . print_stmt SEMI
    (17) statement -> . scan_stmt SEMI
    (18) statement -> . empty
    (128) empty -> .
    (75) var_assign -> . var ASSIGN expr
    (76) final_assign -> . FINAL var ASSIGN expr
    (77) var_compound_assign -> . var PLUS_ASSIGN num_expr
    (78) var_compound_assign -> . var MINUS_ASSIGN num_expr
    (79) var_compound_assign -> . var TIMES_ASSIGN num_expr
    (80) var_compound_assign -> . var DIVIDE_ASSIGN num_expr
    (81) var_compound_assign -> . var POWER_ASSIGN num_expr
    (82) var_compound_assign -> . var MODULO_ASSIGN num_expr
    (83) var_compound_assign -> . var INT_DIVIDE_ASSIGN num_expr
    (84) concat_assign -> . var CONCAT_ASSIGN string_expr
    (85) var_auto -> . var INCREMENT
    (86) var_auto -> . var DECREMENT
    (87) expr -> . string_expr
    (88) expr -> . num_expr
    (89) expr -> . boolean_expr
    (90) expr -> . null_expr
    (91) expr -> . ternary_expr
    (92) expr -> . var
    (93) expr -> . func_call
    (38) func_stmt -> . FN var LPAREN parameters_list RPAREN LBRACE scoped_block RBRACE
    (48) switch_stmt -> . SWITCH LPAREN var RPAREN LBRACE case RBRACE
    (53) if_stmt -> . IF LPAREN boolean_expr RPAREN LBRACE block RBRACE elif_stmt
    (72) while_stmt -> . WHILE LPAREN boolean_expr RPAREN LBRACE block RBRACE
    (73) for_stmt -> . FOR LPAREN var_assign SEMI boolean_expr SEMI var_auto RPAREN LBRACE block RBRACE
    (70) print_stmt -> . PRINT LPAREN expr RPAREN
    (71) scan_stmt -> . SCAN LPAREN var RPAREN
    (74) var -> . ID
    (109) string_expr -> . string_expr CONCAT string_expr
    (110) string_expr -> . STRING
    (111) string_expr -> . var
    (101) num_expr -> . num_expr PLUS num_expr
    (102) num_expr -> . num_expr MINUS num_expr
    (103) num_expr -> . num_expr TIMES num_expr
    (104) num_expr -> . num_expr DIVIDE num_expr
    (105) num_expr -> . num_expr INT_DIVIDE num_expr
    (106) num_expr -> . num_expr POWER num_expr
    (107) num_expr -> . num_expr MODULO num_expr
    (108) num_expr -> . num_factor
    (112) boolean_expr -> . boolean_expr AND boolean_expr
    (113) boolean_expr -> . boolean_expr OR boolean_expr
    (114) boolean_expr -> . NOT boolean_expr
    (115) boolean_expr -> . boolean_factor
    (126) null_expr -> . NULL
    (127) ternary_expr -> . boolean_expr TERNARY_Q expr TERNARY_C expr
    (39) func_call -> . var LPAREN arguments_list RPAREN
    (94) num_factor -> . PLUS num_factor
    (95) num_factor -> . MINUS num_factor
    (96) num_factor -> . INTEGER
    (97) num_factor -> . FLOAT
    (98) num_factor -> . LPAREN num_expr RPAREN
    (99) num_factor -> . func_call
    (100) num_factor -> . var
    (116) boolean_factor -> . LPAREN boolean_expr RPAREN
    (117) boolean_factor -> . BOOLEAN
    (118) boolean_factor -> . comparison
    (119) boolean_factor -> . var
    (120) comparison -> . expr EQ expr
    (121) comparison -> . expr NE expr
    (122) comparison -> . expr LT expr
    (123) comparison -> . expr GT expr
    (124) comparison -> . expr LE expr
    (125) comparison -> . expr GE expr

  ! shift/reduce conflict for FINAL resolved as shift
  ! shift/reduce conflict for FN resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for SCAN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    $end            reduce using rule 128 (empty -> .)
    RBRACE          reduce using rule 128 (empty -> .)
    FINAL           shift and go to state 20
    FN              shift and go to state 27
    SWITCH          shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    PRINT           shift and go to state 33
    SCAN            shift and go to state 34
    ID              shift and go to state 35
    STRING          shift and go to state 36
    NOT             shift and go to state 40
    NULL            shift and go to state 42
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    INTEGER         shift and go to state 43
    FLOAT           shift and go to state 44
    LPAREN          shift and go to state 28
    BOOLEAN         shift and go to state 45

  ! FINAL           [ reduce using rule 128 (empty -> .) ]
  ! FN              [ reduce using rule 128 (empty -> .) ]
  ! SWITCH          [ reduce using rule 128 (empty -> .) ]
  ! IF              [ reduce using rule 128 (empty -> .) ]
  ! WHILE           [ reduce using rule 128 (empty -> .) ]
  ! FOR             [ reduce using rule 128 (empty -> .) ]
  ! PRINT           [ reduce using rule 128 (empty -> .) ]
  ! SCAN            [ reduce using rule 128 (empty -> .) ]
  ! ID              [ reduce using rule 128 (empty -> .) ]
  ! STRING          [ reduce using rule 128 (empty -> .) ]
  ! NOT             [ reduce using rule 128 (empty -> .) ]
  ! NULL            [ reduce using rule 128 (empty -> .) ]
  ! PLUS            [ reduce using rule 128 (empty -> .) ]
  ! MINUS           [ reduce using rule 128 (empty -> .) ]
  ! INTEGER         [ reduce using rule 128 (empty -> .) ]
  ! FLOAT           [ reduce using rule 128 (empty -> .) ]
  ! LPAREN          [ reduce using rule 128 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 128 (empty -> .) ]

    statement                      shift and go to state 4
    statement_list                 shift and go to state 47
    empty                          shift and go to state 5
    var_assign                     shift and go to state 6
    final_assign                   shift and go to state 7
    var_compound_assign            shift and go to state 8
    concat_assign                  shift and go to state 9
    var_auto                       shift and go to state 10
    expr                           shift and go to state 11
    func_stmt                      shift and go to state 12
    switch_stmt                    shift and go to state 13
    if_stmt                        shift and go to state 14
    while_stmt                     shift and go to state 15
    for_stmt                       shift and go to state 16
    print_stmt                     shift and go to state 17
    scan_stmt                      shift and go to state 18
    var                            shift and go to state 19
    num_expr                       shift and go to state 21
    string_expr                    shift and go to state 22
    boolean_expr                   shift and go to state 23
    null_expr                      shift and go to state 24
    ternary_expr                   shift and go to state 25
    func_call                      shift and go to state 26
    num_factor                     shift and go to state 39
    boolean_factor                 shift and go to state 41
    comparison                     shift and go to state 46

state 5

    (4) statement_list -> empty .
    (18) statement -> empty .

  ! reduce/reduce conflict for $end resolved using rule 4 (statement_list -> empty .)
  ! reduce/reduce conflict for RBRACE resolved using rule 4 (statement_list -> empty .)
    $end            reduce using rule 4 (statement_list -> empty .)
    RBRACE          reduce using rule 4 (statement_list -> empty .)
    FINAL           reduce using rule 18 (statement -> empty .)
    FN              reduce using rule 18 (statement -> empty .)
    SWITCH          reduce using rule 18 (statement -> empty .)
    IF              reduce using rule 18 (statement -> empty .)
    WHILE           reduce using rule 18 (statement -> empty .)
    FOR             reduce using rule 18 (statement -> empty .)
    PRINT           reduce using rule 18 (statement -> empty .)
    SCAN            reduce using rule 18 (statement -> empty .)
    ID              reduce using rule 18 (statement -> empty .)
    STRING          reduce using rule 18 (statement -> empty .)
    NOT             reduce using rule 18 (statement -> empty .)
    NULL            reduce using rule 18 (statement -> empty .)
    PLUS            reduce using rule 18 (statement -> empty .)
    MINUS           reduce using rule 18 (statement -> empty .)
    INTEGER         reduce using rule 18 (statement -> empty .)
    FLOAT           reduce using rule 18 (statement -> empty .)
    LPAREN          reduce using rule 18 (statement -> empty .)
    BOOLEAN         reduce using rule 18 (statement -> empty .)

  ! $end            [ reduce using rule 18 (statement -> empty .) ]
  ! RBRACE          [ reduce using rule 18 (statement -> empty .) ]


state 6

    (5) statement -> var_assign . SEMI

    SEMI            shift and go to state 48


state 7

    (6) statement -> final_assign . SEMI

    SEMI            shift and go to state 49


state 8

    (7) statement -> var_compound_assign . SEMI

    SEMI            shift and go to state 50


state 9

    (8) statement -> concat_assign . SEMI

    SEMI            shift and go to state 51


state 10

    (9) statement -> var_auto . SEMI

    SEMI            shift and go to state 52


state 11

    (10) statement -> expr . SEMI
    (120) comparison -> expr . EQ expr
    (121) comparison -> expr . NE expr
    (122) comparison -> expr . LT expr
    (123) comparison -> expr . GT expr
    (124) comparison -> expr . LE expr
    (125) comparison -> expr . GE expr

    SEMI            shift and go to state 53
    EQ              shift and go to state 54
    NE              shift and go to state 55
    LT              shift and go to state 56
    GT              shift and go to state 57
    LE              shift and go to state 58
    GE              shift and go to state 59


state 12

    (11) statement -> func_stmt .

    FINAL           reduce using rule 11 (statement -> func_stmt .)
    FN              reduce using rule 11 (statement -> func_stmt .)
    SWITCH          reduce using rule 11 (statement -> func_stmt .)
    IF              reduce using rule 11 (statement -> func_stmt .)
    WHILE           reduce using rule 11 (statement -> func_stmt .)
    FOR             reduce using rule 11 (statement -> func_stmt .)
    PRINT           reduce using rule 11 (statement -> func_stmt .)
    SCAN            reduce using rule 11 (statement -> func_stmt .)
    ID              reduce using rule 11 (statement -> func_stmt .)
    STRING          reduce using rule 11 (statement -> func_stmt .)
    NOT             reduce using rule 11 (statement -> func_stmt .)
    NULL            reduce using rule 11 (statement -> func_stmt .)
    PLUS            reduce using rule 11 (statement -> func_stmt .)
    MINUS           reduce using rule 11 (statement -> func_stmt .)
    INTEGER         reduce using rule 11 (statement -> func_stmt .)
    FLOAT           reduce using rule 11 (statement -> func_stmt .)
    LPAREN          reduce using rule 11 (statement -> func_stmt .)
    BOOLEAN         reduce using rule 11 (statement -> func_stmt .)
    $end            reduce using rule 11 (statement -> func_stmt .)
    RBRACE          reduce using rule 11 (statement -> func_stmt .)


state 13

    (12) statement -> switch_stmt .

    FINAL           reduce using rule 12 (statement -> switch_stmt .)
    FN              reduce using rule 12 (statement -> switch_stmt .)
    SWITCH          reduce using rule 12 (statement -> switch_stmt .)
    IF              reduce using rule 12 (statement -> switch_stmt .)
    WHILE           reduce using rule 12 (statement -> switch_stmt .)
    FOR             reduce using rule 12 (statement -> switch_stmt .)
    PRINT           reduce using rule 12 (statement -> switch_stmt .)
    SCAN            reduce using rule 12 (statement -> switch_stmt .)
    ID              reduce using rule 12 (statement -> switch_stmt .)
    STRING          reduce using rule 12 (statement -> switch_stmt .)
    NOT             reduce using rule 12 (statement -> switch_stmt .)
    NULL            reduce using rule 12 (statement -> switch_stmt .)
    PLUS            reduce using rule 12 (statement -> switch_stmt .)
    MINUS           reduce using rule 12 (statement -> switch_stmt .)
    INTEGER         reduce using rule 12 (statement -> switch_stmt .)
    FLOAT           reduce using rule 12 (statement -> switch_stmt .)
    LPAREN          reduce using rule 12 (statement -> switch_stmt .)
    BOOLEAN         reduce using rule 12 (statement -> switch_stmt .)
    $end            reduce using rule 12 (statement -> switch_stmt .)
    RBRACE          reduce using rule 12 (statement -> switch_stmt .)


state 14

    (13) statement -> if_stmt .
